# ay

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  conanfile.py  conanfile.txt  premake5.lua
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
3rd/stb/: CMakeLists.txt
Ay/: CMakeLists.txt
Ay/Include/: Device.hpp  Log.hpp  Timer.hpp
Ay/Include/Render/: Camera.hpp  Embedding.hpp  GCard.hpp  GCardRenderer.hpp  Light.hpp  Material.hpp  MaterialManager.hpp  Mesh.hpp  MeshRenderer.hpp  Model.hpp  Strand.hpp  Texture2D.hpp  Transform.hpp
Ay/Include/Scene/: Manager.hpp  Node.hpp
Ay/Source/: Log.cpp
Ay/Source/Render/: Camera.cpp  Embedding.cpp  GCardRenderer.cpp  Light.cpp  Material.cpp  MaterialManager.cpp  Mesh.cpp  MeshRenderer.cpp  Model.cpp  Shader.cpp  Texture2D.cpp  gcard.cpp
Ay/Source/Scene/: Manager.cpp  Node.cpp
Examples/: CMakeLists.txt
Examples/01/: Main.cpp  Scene.cpp  Scene.hpp
Models/: suzanne.mtl  tore.mtl
Shaders/: base_frag.glsl  base_vert.glsl  phong_frag.glsl
assets/: CMakeLists.txt  phong.frag.glsl  phong.vert.glsl
assets/models/: container.glb  cube.glb  dodge.glb  suzanne.glb  tore.glb
assets/shaders/: phong.glsl
ay/: CMakeLists.txt  ay.h  device.h  event.h  event_manager.h  log.h  timer.h
ay/render/: camera.cpp  camera.h  device.cpp  device.h  embedding.cpp  embedding.h  gcard.cpp  gcard.h  gcard_renderer.cpp  gcard_renderer.h  material.cpp  material.h  model.h  shader.cpp  shader.h  texture2d.h  vertex.h
ay/scene/: entity.h  manager.cpp  manager.h  node.cpp  node.h
code/: CMakeLists.txt  Device.cpp  Device.hpp  Main.cpp  Timer.cpp  application.cpp  application.hpp  device.cc  device.cpp  device.h  device.hpp  log.cpp  main.cc  main.cpp  timer.cc  timer.cpp  timer.h
code/Render/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  Texture2D.cpp  Transform.cpp  Vertex.hpp
code/Scene/: Entity.hpp  Manager.cpp  Manager.hpp  Node.cpp  Node.hpp
code/entity/: camera.cpp  camera.hpp  entity.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp
code/model/: material.cpp  material.hpp  texture2d.cpp
code/render/: camera.cc  camera.h  light.cc  light.h  material.cc  material.h  mesh.cc  mesh.h  model.cc  model.h  shader.cc  shader_manager.cc  shader_manager.h  texture_2d.cc  texture_2d.h  transform.cc
code/rendering/: material.cpp  material.hpp  shader.cpp  shader.hpp  shader_manager.cpp  texture2d.cpp  texture2d.hpp  transform.cpp  transform.hpp
code/scene/: entity.h  manager.cc  manager.h  node.cc  node.h  render_queue.h  scene.cpp  scene.hpp
code/shader/: shader.cpp
code/utils/: gltf_loader.cpp  gltf_loader.hpp
examples/: CMakeLists.txt
examples/01/: main.cpp  scene.cpp  scene.h
inc/: context.h  strand.h  window.h
include/: ay.hpp  camera.hpp  color.hpp  context.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  model_node.hpp  renderer.hpp  scene.hpp  transform.hpp  window.hpp
include/imgui/: imgui_impl_opengl3.h
main/: log.cpp  log.h  main.cpp
premake_modules/: glad.json  glm.json  library.lua  sdl2.json  stb.json
render/: camera.cpp  camera.h  device.cpp  device.h  embedding.cpp  embedding.h  gcard.h  gcard_renderer.cpp  gcard_renderer.h  shader.cpp  texture2d.cpp
scene/: entity.h  manager.h  node.cpp  node.h
shaders/: base_frag.glsl  base_vert.glsl  phong_frag.glsl  phong_vert.glsl
src/: camera.cpp  camera.hpp  color.hpp  context.cpp  context.hpp  device.cpp  device.h  embedding.cpp  embedding.h  gcard.cpp  gcard.h  gcard_renderer.cpp  gcard_renderer.h  lib.cpp  lib.hpp  light.hpp  log.h  main.c  main.cpp  material.cpp  material.h  material.hpp  math.hpp  mesh.cpp  mesh.hpp  mesh_factory.cpp  mesh_factory.hpp  model.cpp  model.h  model.hpp  model_node.cpp  model_node.hpp  object.hpp  scene.hpp  shader.cpp  shader.h  strand.c  strand.h  texture2d.cpp  texture2d.h  (+6 more)
src/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp
src/platform/: opengl.hpp  platform.hpp
src/platform/opengl/: buffer.hpp  framebuffer.hpp  helper.hpp  renderbuffer.hpp  shader.hpp  texture2d.hpp  vertexarrayobject.hpp
src/shaders/: blinnphong.hpp
wrappers/CSharp/: CSharp.sln
wrappers/CSharp/Ay/: Ay.csproj  Color.cs  Context.cs  Lib.cs  Math.cs  Window.cs
wrappers/CSharp/Example/: Example.csproj  Program.cs  imgui.ini
y/: CMakeLists.txt
y/Include/Render/: GCard.hpp  Light.hpp  Model.hpp  Shader.hpp
